--- a/ccxjq5ub0/lma/thanos/Deployment_thanos-query.yaml
+++ b/ccxjq5ub0/lma/thanos/Deployment_thanos-query.yaml
@@ -62,6 +62,7 @@ spec:
             - --http-address=0.0.0.0:10902
             - --query.replica-label=replica
             - --store=prometheus-operated.lma.svc.cluster.local:10901
+            - --store=aaa2a5c02398545e9bcc5cce2ded57ba-95823766.ap-northeast-2.elb.amazonaws.com:10901
           ports:
             - name: http
               containerPort: 10902
