--- a/ccxjq5ub0/decapod-controller/postgresql/Secret_postgresql.yaml
+++ b/ccxjq5ub0/decapod-controller/postgresql/Secret_postgresql.yaml
@@ -12,5 +12,5 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 type: Opaque
 data:
-  postgres-password: "N01kQ3BkM3RqTA=="
+  postgres-password: "djIzbmhsQ1g2aw=="
   # We don't auto-generate LDAP password when it's not provided as we do for other passwords
