See https://github.com/demo-decapod10/ccxjq5ub0/commit/132d974c8e9310da81e375a17b406768182126b2

--- a/ccxjq5ub0/service-mesh/servicemesh-jaeger-resource/Jaeger_jaeger-operator-jaeger.yaml
+++ b/ccxjq5ub0/service-mesh/servicemesh-jaeger-resource/Jaeger_jaeger-operator-jaeger.yaml
@@ -35,6 +35,11 @@ spec:
               - enabled
   storage:
     type: elasticsearch
+    esIndexCleaner:
+      enabled: true
+      image: jaegertracing/jaeger-es-index-cleaner:1.29.0
+      numberOfDays: 7
+      schedule: "55 04 * * *"
     options:
       es:
         index-prefix: jaeger
