--- a/ccxjq5ub0/lma/thanos/Deployment_thanos-query.yaml
+++ b/ccxjq5ub0/lma/thanos/Deployment_thanos-query.yaml
@@ -62,6 +62,7 @@ spec:
             - --http-address=0.0.0.0:10902
             - --query.replica-label=replica
             - --store=prometheus-operated.lma.svc.cluster.local:10901
+            - --store=a98e64b543cbc49fc95f0a5fa0aef8a6-772860639.ap-northeast-2.elb.amazonaws.com:10901
           ports:
             - name: http
               containerPort: 10902
